<resources>
    <string name="app_name">JB test app</string>

    <string name="appbar_header_team_members">Team members list</string>
    <string name="appbar_header_select_filter">Select filter</string>
    <string name="appbar_header_profile">Profile</string>

    <string name="skills_header">Skills</string>
    <string name="projects_header">Projects</string>
    <string name="project_header">Project</string>
    <string name="availability_header">Availability</string>
    <string name="manager_header">Manager</string>
    <string name="filter_working_now">Working now</string>
    <string name="dont_filter_availability">Don\'t filter availability</string>
    <string name="filter_on_holidays_now">On holidays now</string>
    <string name="filter_any_of_skills">Any of:</string>
    <string name="filter_all_of_skills">All of:</string>
    <string name="filter_no_skills">Don\'t filter skills</string>

    <string name="working_available">Available</string>
    <string name="not_available">N/A</string>
    <string name="starting_in_hours_mins">starting in %$1s hours, %$1s mins</string>
    <string name="starting_in_mins">starting in %s mins</string>
    <string name="ending_in_hours_mins">ending in %$1s hours, %$1s mins</string>
    <string name="ending_in_mins">ending in %s mins</string>

    <string name="assign_to_project">Assign to project…</string>
    <string name="change_project">Change project…</string>
    <string name="works_from_till_within_timezone">%s - %s, timezone: %s</string>
    <string name="no_manager">No manager</string>
    <string name="no_record">No record</string>
    <string name="no_project">No project</string>
    <string name="not_assigned_to_project">Not assigned to project</string>
    <string name="project_colon">Project: %s</string>
    <string name="confirm_project">Confirm project</string>
    <string name="no_data_try_different_filter">No data found for your request\nTry with different filter!</string>
    <string name="your_data_is_loading">Your data is loading</string>
    <string name="network_error_please_retry">Failed to load\nPlease, retry</string>
    <string name="are_you_sure_to_transfer_x_to_y">Are you sure to transfer %s to %s project?</string>
    <string name="transfer_to_project">Transfer to project</string>
    <string name="yes_button">Yes</string>
    <string name="cancel_button">Cancel</string>
    <string name="failed_to_change_retry">Failed… Retry?</string>
    <string name="retry">Retry</string>
    <string name="project_changed_successfully">Project changed…</string>
    <string name="changing">Changing…</string>

    <!--filter options-->
    <string name="skills_filter_option">skills</string>
    <string name="projects_filter_option">projects</string>
    <string name="holidays_filter_option">holidays</string>
    <string name="work_time_filter_option">working now</string>
    <string name="all_data_no_filters">All data (no filters)</string>
    <string name="filtering_by">Filtering by: %s</string>
    <string name="on_holidays_until">Holidays until %s</string>
    <string name="free_since">Free since %s</string>
</resources>
